--- a/MauiCrudApp.Ble.Example/Features/Device/Views/DeviceConnectPage.xaml
+++ b/MauiCrudApp.Ble.Example/Features/Device/Views/DeviceConnectPage.xaml
@@ -64,6 +64,10 @@
                                                             <Label Text="{Binding CanWrite}" />
                                                         </StackLayout>
                                                         <StackLayout Orientation="Horizontal" Spacing="3" Margin="0,0,5,0">
+                                                            <Label Text="WriteType:" />
+                                                            <Label Text="{Binding WriteType}" />
+                                                        </StackLayout>
+                                                        <StackLayout Orientation="Horizontal" Spacing="3" Margin="0,0,5,0">
                                                             <Label Text="CanNotify:" />
                                                             <Label Text="{Binding CanNotify}" />
                                                         </StackLayout>
