--- a/MauiCrudApp.Ble.Example/App.xaml
+++ b/MauiCrudApp.Ble.Example/App.xaml
@@ -1,8 +1,7 @@
 <?xml version = "1.0" encoding = "UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MauiCrudApp.Ble.Example"
-             xmlns:converters="clr-namespace:MauiCrudApp.Ble.Example.Converters"
+             xmlns:converters="clr-namespace:MauiCrudApp.Ble.Logic.Converters;assembly=MauiCrudApp.Ble.Logic"
              x:Class="MauiCrudApp.Ble.Example.App">
     <Application.Resources>
         <ResourceDictionary>
