--- a/MauiCrudApp.Ble.Views/Features/Characteristic/CharacteristicControlPage.xaml
+++ b/MauiCrudApp.Ble.Views/Features/Characteristic/CharacteristicControlPage.xaml
@@ -3,8 +3,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:commonViews="clr-namespace:MauiCrudApp.Common.Views;assembly=MauiCrudApp.Common"
-    xmlns:converters="clr-namespace:MauiCrudApp.Ble.Example.Converters"
-    x:Class="MauiCrudApp.Ble.Example.Features.Characteristic.Views.CharacteristicControlPage"
+    xmlns:converters="clr-namespace:MauiCrudApp.Ble.Logic.Converters;assembly=MauiCrudApp.Ble.Logic"
+    x:Class="MauiCrudApp.Ble.Views.Features.Characteristic.Views.CharacteristicControlPage"
     Title="Characteristic Control">
     <commonViews:PageBase.Resources>
         <converters:BoolToStringConverter x:Key="BoolToStringConverter" />
