--- a/MauiCrudApp.Ble.Views/Features/Device/DeviceConnectPage.xaml
+++ b/MauiCrudApp.Ble.Views/Features/Device/DeviceConnectPage.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:commonViews="clr-namespace:MauiCrudApp.Common.Views;assembly=MauiCrudApp.Common"
-    x:Class="MauiCrudApp.Ble.Example.Features.Device.Views.DeviceConnectPage"
+    x:Class="MauiCrudApp.Ble.Views.Features.Device.Views.DeviceConnectPage"
     Title="DeviceConnectPage">
 
     <ScrollView>
